# ndn-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC-GAPS.md  SPEC_TODO.md  TODO.md  ndn-router.example.toml  scratch.txt
.github/workflows/: benchmarks.yml  ci-face-l2.yml  ci.yml  docker-publish.yml  mobile.yml  testbed.yml  wiki.yml
bench/: data.js
binaries/ndn-bench/: Cargo.toml  README.md
binaries/ndn-bench/src/: main.rs
binaries/ndn-fwd/: Cargo.toml  Dockerfile  README.md
binaries/ndn-fwd/src/: main.rs  mgmt_ndn.rs
binaries/ndn-router/: Cargo.toml
binaries/ndn-router/src/: main.rs  mgmt_ndn.rs
binaries/ndn-tools/: Cargo.toml  README.md
binaries/ndn-tools/src/: ctl.rs  iperf.rs  peek.rs  ping.rs  put.rs  recv.rs  sec.rs  send.rs  traffic.rs
bindings/ndn-boltffi/: Cargo.toml
bindings/ndn-boltffi/src/: consumer.rs  engine.rs  lib.rs  producer.rs  subscriber.rs  types.rs
crates/ndn-app/: Cargo.toml
crates/ndn-app/src/: app_face.rs  blocking.rs  connection.rs  consumer.rs  error.rs  lib.rs  producer.rs  queryable.rs  security.rs  subscriber.rs
crates/ndn-app/tests/: embedded.rs
crates/ndn-cert/: Cargo.toml
crates/ndn-cert/src/: ca.rs  client.rs  error.rs  lib.rs  policy.rs  protocol.rs
crates/ndn-cert/src/challenge/: mod.rs  possession.rs  token.rs
crates/ndn-compute/: Cargo.toml
crates/ndn-compute/src/: compute_face.rs  lib.rs  registry.rs
crates/ndn-config/: Cargo.toml
crates/ndn-config/src/: config.rs  control_parameters.rs  control_response.rs  lib.rs  mgmt.rs  nfd_command.rs
crates/ndn-did/: Cargo.toml
crates/ndn-discovery/: Cargo.toml
crates/ndn-discovery/src/: backoff.rs  composite.rs  config.rs  context.rs  hello.rs  hello_protocol.rs  lib.rs  link_medium.rs  mac_addr.rs  neighbor.rs  no_discovery.rs  protocol.rs  scope.rs  service_discovery.rs  udp_nd.rs
crates/ndn-discovery/src/gossip/: epidemic.rs  svs_gossip.rs
crates/ndn-discovery/src/hello/: ether.rs  medium.rs  mod.rs  payload.rs  protocol.rs  udp.rs
crates/ndn-discovery/src/service_discovery/: browsing.rs  fib_auto.rs  mod.rs  records.rs
crates/ndn-discovery/src/strategy/: backoff.rs  composite.rs  mod.rs  passive.rs  reactive.rs
crates/ndn-engine/: Cargo.toml
crates/ndn-engine/benches/: pipeline.rs
crates/ndn-engine/src/: builder.rs  compose.rs  discovery_context.rs  dispatcher.rs  engine.rs  expiry.rs  fib.rs  lib.rs  routing.rs
crates/ndn-engine/src/dispatcher/: inbound.rs  mod.rs  outbound.rs  pipeline.rs
crates/ndn-engine/src/pipeline/: context.rs  mod.rs
crates/ndn-engine/src/stages/: cs.rs  decode.rs  pit.rs  strategy.rs  validation.rs
crates/ndn-face-l2/: Cargo.toml
crates/ndn-face-l2/src/: af_packet.rs  ether_macos.rs  ether_nd.rs  lib.rs  multicast_ether.rs
crates/ndn-face-local/: Cargo.toml
crates/ndn-face-local/benches/: face_local.rs
crates/ndn-face-local/src/: app.rs  lib.rs  unix.rs
crates/ndn-face-local/src/shm/: iox2.rs  mod.rs  spsc.rs
crates/ndn-face-net/: Cargo.toml
crates/ndn-face-net/src/: lib.rs  multicast.rs  reliability.rs  tcp.rs  udp.rs  websocket.rs
crates/ndn-face-serial/: Cargo.toml
crates/ndn-face-serial/src/: cobs.rs  lib.rs  serial.rs
crates/ndn-face-wireless/: Cargo.toml
crates/ndn-face-wireless/src/: af_packet.rs  bluetooth.rs  ether.rs  lib.rs  multicast_ether.rs  neighbor.rs  radio.rs  wfb.rs
crates/ndn-faces/: Cargo.toml
crates/ndn-identity/: Cargo.toml
crates/ndn-identity/src/: ca.rs  device.rs  enroll.rs  error.rs  identity.rs  renewal.rs
crates/ndn-ipc/: Cargo.toml
crates/ndn-ipc/src/: chunked.rs  client.rs  forwarder_client.rs  lib.rs  mgmt_client.rs  registry.rs  router_client.rs  server.rs
crates/ndn-mobile/: Cargo.toml
crates/ndn-packet/: Cargo.toml
crates/ndn-packet/src/: data.rs  encode.rs  error.rs  fragment.rs  interest.rs  lib.rs  lp.rs  meta_info.rs  nack.rs  name.rs  signature.rs
crates/ndn-packet/src/encode/: data.rs  interest.rs  mod.rs
crates/ndn-packet/src/lp/: decode.rs  encode.rs  fragment.rs  mod.rs
crates/ndn-pipeline/: Cargo.toml
crates/ndn-pipeline/src/: action.rs  context.rs  lib.rs  stage.rs
crates/ndn-research/: Cargo.toml
crates/ndn-research/src/: channel_manager.rs  flow_table.rs  lib.rs  observer.rs
crates/ndn-routing/: Cargo.toml
crates/ndn-routing/src/: lib.rs
crates/ndn-routing/src/protocols/: dvr.rs  mod.rs  static.rs
crates/ndn-security/: Cargo.toml
crates/ndn-security/src/: cert_cache.rs  cert_fetcher.rs  error.rs  key_store.rs  keychain.rs  lib.rs  manager.rs  pib.rs  profile.rs  safe_data.rs  sign_ext.rs  signer.rs  trust_schema.rs  validator.rs  verifier.rs
crates/ndn-security/src/did/: convert.rs  encoding.rs  mod.rs  resolver.rs
crates/ndn-security/src/did/resolver/: key.rs  ndn.rs
crates/ndn-security/src/validator/: chain.rs
crates/ndn-sim/: Cargo.toml
crates/ndn-store/: Cargo.toml
crates/ndn-store/src/: content_store.rs  fib.rs  lib.rs  lru_cs.rs  observable_cs.rs  pit.rs  sharded_cs.rs  strategy_table.rs  trie.rs
crates/ndn-strategy/: Cargo.toml
crates/ndn-strategy-wasm/: Cargo.toml
crates/ndn-strategy/src/: best_route.rs  context.rs  lib.rs  measurements.rs  multicast.rs  strategy.rs
crates/ndn-strategy/src/filters/: rssi.rs
crates/ndn-sync/: Cargo.toml
crates/ndn-sync/src/: lib.rs  protocol.rs  psync.rs  psync_sync.rs  svs.rs  svs_sync.rs
crates/ndn-tlv/: Cargo.toml
crates/ndn-transport/: Cargo.toml
crates/ndn-transport/src/: congestion.rs  face.rs  face_event.rs  face_pair_table.rs  face_table.rs  forwarding.rs  lib.rs  raw_packet.rs  stream_face.rs  tlv_codec.rs
docs/: design-session.md  did-ndn-spec.md  discovery.md  spsc-shm-spec.md  unimplemented.md
docs/archive/: design-session.md
docs/notes/: high-throughput-forwarding.md
docs/protocols/: ndn-ft-protocol.md
docs/wiki/: book.toml
examples/: README.md
examples/cross-layer-enricher/: Cargo.toml
examples/discovery-lan/: Cargo.toml
examples/strategy-composed/: Cargo.toml
testbed/: Dockerfile.interop  Dockerfile.testclient  docker-compose.yml
(+453 files in other folders)
