[workspace]
resolver = "2"
members = [
    # Layer 4 — foundation (no NDN deps)
    "crates/ndn-tlv",
    "crates/ndn-packet",
    "crates/ndn-transport",
    "crates/ndn-store",
    # Layer 3 — face implementations
    "crates/ndn-face-net",
    "crates/ndn-face-local",
    "crates/ndn-face-serial",
    "crates/ndn-face-l2",
    # Layer 2 — pipeline, strategy, security
    "crates/ndn-pipeline",
    "crates/ndn-strategy",
    "crates/ndn-security",
    "crates/ndn-did",
    "crates/ndn-cert",
    "crates/ndn-identity",
    # Layer 1 — engine and application API
    "crates/ndn-engine",
    "crates/ndn-app",
    "crates/ndn-ipc",
    "crates/ndn-config",
    "crates/ndn-discovery",
    # Routing protocols
    "crates/ndn-routing",
    # Simulation
    "crates/ndn-sim",
    # WebAssembly bindings for browser simulation
    "crates/ndn-wasm",
    # Layer 5 — research extensions
    "crates/ndn-strategy-wasm",
    "crates/ndn-research",
    "crates/ndn-compute",
    "crates/ndn-sync",
    # Binaries
    "binaries/did-ndn-driver",
    "binaries/ndn-router",
    "binaries/ndn-tools",
    "binaries/ndn-bench",
    # File transfer library
    "crates/ndn-filestore",
    # Embeddable tool logic (used by dashboard and standalone binaries)
    "crates/ndn-tools-core",
    # Embedded
    "crates/ndn-embedded",
    # Mobile (Android / iOS)
    "crates/ndn-mobile",
    # Python bindings
    "bindings/ndn-python",
    # BoltFFI bindings (Android/Kotlin + iOS/Swift)
    "bindings/ndn-boltffi",
    # Dashboard
    "tools/ndn-dashboard",
    # Examples
    "examples/strategy-custom",
    "examples/strategy-composed",
    "examples/cross-layer-enricher",
    "examples/wasm-strategy",
    "examples/discovery-lan",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ndn-rs contributors"]
license = "MIT OR Apache-2.0"

[workspace.metadata.crane]
name = "ndn-rs"

[workspace.dependencies]
# NDN workspace crates
ndn-tlv       = { path = "crates/ndn-tlv", default-features = false }
ndn-packet    = { path = "crates/ndn-packet", default-features = false }
ndn-transport = { path = "crates/ndn-transport" }
ndn-store     = { path = "crates/ndn-store" }
ndn-pipeline  = { path = "crates/ndn-pipeline" }
ndn-strategy  = { path = "crates/ndn-strategy" }
ndn-security  = { path = "crates/ndn-security" }
ndn-engine    = { path = "crates/ndn-engine" }
ndn-app       = { path = "crates/ndn-app" }
ndn-ipc       = { path = "crates/ndn-ipc" }
ndn-config    = { path = "crates/ndn-config" }
ndn-discovery = { path = "crates/ndn-discovery" }
ndn-face-net      = { path = "crates/ndn-face-net" }
ndn-face-local    = { path = "crates/ndn-face-local" }
ndn-face-serial   = { path = "crates/ndn-face-serial", default-features = false }
ndn-face-l2 = { path = "crates/ndn-face-l2" }
ndn-strategy-wasm = { path = "crates/ndn-strategy-wasm" }
ndn-research  = { path = "crates/ndn-research" }
ndn-compute   = { path = "crates/ndn-compute" }
ndn-sync      = { path = "crates/ndn-sync" }
ndn-embedded  = { path = "crates/ndn-embedded" }
ndn-mobile    = { path = "crates/ndn-mobile" }
ndn-wasm      = { path = "crates/ndn-wasm" }
ndn-sim       = { path = "crates/ndn-sim" }
ndn-did      = { path = "crates/ndn-did" }
ndn-cert     = { path = "crates/ndn-cert" }
ndn-identity = { path = "crates/ndn-identity" }
ndn-filestore  = { path = "crates/ndn-filestore" }
ndn-tools-core = { path = "crates/ndn-tools-core" }
ndn-routing    = { path = "crates/ndn-routing" }

# Core async runtime — individual crates enable only the features they need
tokio      = { version = "1", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }

# Zero-copy byte buffers (no default features — crates opt in to bytes/std explicitly)
bytes = { version = "1", default-features = false }

# Embedded support
heapless = "0.8"
nb       = "1"

# Concurrent data structures
dashmap  = "6"
smallvec = { version = "1", features = ["union"] }

# LRU cache
lru = "0.12"

# Structured logging
tracing = "0.1"

# Async combinators and stream/sink extension traits
futures = "0.3"

# Error handling
anyhow    = "1"
thiserror = "2"
libc = "0.2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# Cryptography
ring          = "0.17"
ed25519-dalek = "2"
# NDNCERT 0.3: ECDH (P-256), HKDF-SHA256, and AES-GCM-128
p256          = { version = "0.13", default-features = false, features = ["ecdh"] }
aes-gcm       = { version = "0.10", features = ["alloc", "getrandom"] }
hkdf          = "0.12"
sha2          = "0.10"

# Serial port support
tokio-serial = "5"

# WebSocket support
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Logging subscriber (binaries only)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Synchronization
parking_lot = "0.12"

# WebAssembly text format (examples)
wat = "1"

# Persistent storage
fjall = "3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Raw packet capture (Windows Npcap / libpcap)
pcap = "2"

# Windows system APIs
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }
