[workspace]
resolver = "2"

# default-members: crates built by `cargo build` / `cargo test` / `cargo clippy`
# without an explicit -p flag.  Platform-specific crates that require special
# toolchains are excluded here but remain in `members` so they can be built
# explicitly (e.g. `cargo build -p ndn-wasm --target wasm32-unknown-unknown`):
#
#   ndn-wasm, ndn-strategy-wasm  — require wasm32 target + wasm-bindgen
#   ndn-embedded                 — bare-metal no_std (ARM Cortex-M, RISC-V, ESP32)
#   ndn-mobile                   — Android/iOS; requires NDK / Xcode toolchains
#   ndn-python                   — requires Python dev headers (PyO3)
#   ndn-boltffi                  — requires Android NDK or Xcode for FFI linkage
#   examples/wasm-strategy       — wasm32 target required
default-members = [
    # foundation — zero-NDN-dep building blocks
    "crates/foundation/ndn-tlv",
    "crates/foundation/ndn-packet",
    "crates/foundation/ndn-transport",
    "crates/foundation/ndn-store",
    # faces — all face implementations (one consolidated crate)
    "crates/faces/ndn-faces",
    # engine — forwarding pipeline, strategies, security, app API
    "crates/engine/ndn-strategy",
    "crates/engine/ndn-security",
    "crates/engine/ndn-engine",
    "crates/engine/ndn-app",
    "crates/engine/ndn-ipc",
    "crates/engine/ndn-config",
    "crates/engine/ndn-discovery",
    # protocols — routing, sync, identity
    "crates/protocols/ndn-routing",
    "crates/protocols/ndn-sync",
    "crates/protocols/ndn-did",
    "crates/protocols/ndn-cert",
    "crates/protocols/ndn-identity",
    # sim — simulation framework (std, no special toolchain)
    "crates/sim/ndn-sim",
    # research — experimental extensions
    "crates/research/ndn-research",
    "crates/research/ndn-compute",
    # support — shared tool libraries
    "crates/support/ndn-tools-core",
    # binaries
    "binaries/did-ndn-driver",
    "binaries/ndn-fwd",
    "binaries/ndn-tools",
    "binaries/ndn-bench",
    # dashboard
    "tools/ndn-dashboard",
    # examples (host-native)
    "examples/strategy-custom",
    "examples/strategy-composed",
    "examples/cross-layer-enricher",
    "examples/discovery-lan",
]

members = [
    # foundation — zero-NDN-dep building blocks (TLV codec, packet types, transport traits, content store)
    "crates/foundation/ndn-tlv",
    "crates/foundation/ndn-packet",
    "crates/foundation/ndn-transport",
    "crates/foundation/ndn-store",
    # faces — all face implementations in one consolidated crate (local, net, serial, l2)
    "crates/faces/ndn-faces",
    # engine — forwarding pipeline, strategy trait, security primitives, application API
    "crates/engine/ndn-strategy",
    "crates/engine/ndn-security",
    "crates/engine/ndn-engine",
    "crates/engine/ndn-app",
    "crates/engine/ndn-ipc",
    "crates/engine/ndn-config",
    "crates/engine/ndn-discovery",
    # protocols — routing algorithms, sync protocols, DID/certificate identity stack
    "crates/protocols/ndn-routing",
    "crates/protocols/ndn-sync",
    "crates/protocols/ndn-did",
    "crates/protocols/ndn-cert",
    "crates/protocols/ndn-identity",
    # sim — network simulation framework + WebAssembly browser simulation
    "crates/sim/ndn-sim",
    "crates/sim/ndn-wasm",          # requires wasm32 target
    "crates/sim/ndn-strategy-wasm", # requires wasm32 target
    # research — in-network compute, experimental extensions
    "crates/research/ndn-research",
    "crates/research/ndn-compute",
    # platform — special deployment targets (bare-metal, Android/iOS)
    "crates/platform/ndn-embedded", # bare-metal no_std
    "crates/platform/ndn-mobile",   # Android/iOS
    # support — shared tool libraries used by both binaries and dashboard
    "crates/support/ndn-tools-core",
    # binaries
    "binaries/did-ndn-driver",
    "binaries/ndn-fwd",
    "binaries/ndn-tools",
    "binaries/ndn-bench",
    # bindings — FFI to other languages
    "bindings/ndn-python",   # requires Python dev headers
    "bindings/ndn-boltffi",  # requires Android NDK / Xcode
    # dashboard
    "tools/ndn-dashboard",
    # examples
    "examples/strategy-custom",
    "examples/strategy-composed",
    "examples/cross-layer-enricher",
    "examples/wasm-strategy", # requires wasm32 target
    "examples/discovery-lan",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ndn-rs contributors"]
license = "MIT OR Apache-2.0"

[workspace.metadata.crane]
name = "ndn-rs"

[workspace.dependencies]
# NDN workspace crates — grouped by subdirectory layer
ndn-tlv       = { path = "crates/foundation/ndn-tlv",       default-features = false }
ndn-packet    = { path = "crates/foundation/ndn-packet",    default-features = false }
ndn-transport = { path = "crates/foundation/ndn-transport" }
ndn-store     = { path = "crates/foundation/ndn-store" }
ndn-faces         = { path = "crates/faces/ndn-faces" }
ndn-strategy  = { path = "crates/engine/ndn-strategy" }
ndn-security  = { path = "crates/engine/ndn-security" }
ndn-engine    = { path = "crates/engine/ndn-engine" }
ndn-app       = { path = "crates/engine/ndn-app" }
ndn-ipc       = { path = "crates/engine/ndn-ipc" }
ndn-config    = { path = "crates/engine/ndn-config" }
ndn-discovery = { path = "crates/engine/ndn-discovery",     default-features = false }
ndn-routing    = { path = "crates/protocols/ndn-routing" }
ndn-sync      = { path = "crates/protocols/ndn-sync" }
ndn-did      = { path = "crates/protocols/ndn-did" }
ndn-cert     = { path = "crates/protocols/ndn-cert" }
ndn-identity = { path = "crates/protocols/ndn-identity" }
ndn-sim       = { path = "crates/sim/ndn-sim" }
ndn-wasm      = { path = "crates/sim/ndn-wasm" }
ndn-strategy-wasm = { path = "crates/sim/ndn-strategy-wasm" }
ndn-research  = { path = "crates/research/ndn-research" }
ndn-compute   = { path = "crates/research/ndn-compute" }
ndn-embedded  = { path = "crates/platform/ndn-embedded" }
ndn-mobile    = { path = "crates/platform/ndn-mobile" }
ndn-tools-core = { path = "crates/support/ndn-tools-core" }

# Core async runtime — individual crates enable only the features they need
tokio      = { version = "1", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }

# Zero-copy byte buffers (no default features — crates opt in to bytes/std explicitly)
bytes = { version = "1", default-features = false }

# Embedded support
heapless = "0.8"
nb       = "1"

# Concurrent data structures
dashmap  = "6"
smallvec = { version = "1", features = ["union"] }

# LRU cache
lru = "0.12"

# Structured logging
tracing = "0.1"

# Async combinators and stream/sink extension traits
futures = "0.3"

# Error handling
anyhow    = "1"
thiserror = "2"
libc = "0.2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# Cryptography
ring          = "0.17"
ed25519-dalek = "2"
blake3        = "1"
# NDNCERT 0.3: ECDH (P-256), HKDF-SHA256, and AES-GCM-128
p256          = { version = "0.13", default-features = false, features = ["ecdh"] }
aes-gcm       = { version = "0.10", features = ["alloc", "getrandom"] }
hkdf          = "0.12"
sha2          = "0.10"

# Serial port support
tokio-serial = "5"

# WebSocket support
tokio-tungstenite = { version = "0.26" }

# WebSocket TLS (server-side)
tokio-rustls      = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rcgen             = { version = "0.13", default-features = false, features = ["pem", "crypto", "ring"] }
rustls-pemfile    = { version = "2" }

# Logging subscriber (binaries only)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Synchronization
parking_lot = "0.12"

# WebAssembly text format (examples)
wat = "1"

# Persistent storage
fjall = "3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Bluetooth LE GATT server (Linux/BlueZ, D-Bus)
bluer = { version = "0.17", default-features = false, features = ["bluetoothd"] }

# Bluetooth LE GATT server (macOS/iOS, CoreBluetooth via objc2)
objc2                = { version = "0.5" }
objc2-core-bluetooth = { version = "0.2" }
objc2-foundation     = { version = "0.2" }

# Raw packet capture (Windows Npcap / libpcap)
pcap = "2"

# Windows system APIs
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }
