[package]
name = "ndn-router"
description = "Standalone NDN forwarder binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ndn-router"
path = "src/main.rs"


[dependencies]
ndn-engine       = { workspace = true }
ndn-app          = { workspace = true }
ndn-face-net     = { workspace = true }
ndn-face-local   = { workspace = true }
ndn-strategy     = { workspace = true }
ndn-store        = { workspace = true }
ndn-security     = { workspace = true }
ndn-config       = { workspace = true }
ndn-packet       = { workspace = true }
ndn-transport    = { workspace = true }
bytes            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "io-util"] }
tokio-util       = { workspace = true, features = ["rt"] }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow           = { workspace = true }
