[package]
name = "ndn-router"
description = "Standalone NDN forwarder binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ndn-router"
path = "src/main.rs"

[features]
default = ["spsc-shm", "websocket", "serial"]
spsc-shm    = ["ndn-face-local/spsc-shm"]
websocket   = ["ndn-face-net/websocket", "dep:tokio-tungstenite"]
serial      = ["ndn-face-serial/serial"]
yubikey-piv = ["ndn-security/yubikey-piv"]

[dependencies]
base64           = { workspace = true }
ndn-engine       = { workspace = true }
ndn-discovery    = { workspace = true }
ndn-app          = { workspace = true }
ndn-face-net     = { workspace = true }
ndn-face-local   = { workspace = true }
ndn-face-serial  = { workspace = true }
ndn-face-l2 = { workspace = true }
ndn-strategy     = { workspace = true }
ndn-store        = { workspace = true }
ndn-security     = { workspace = true }
ndn-cert         = { workspace = true }
ndn-config       = { workspace = true }
getrandom        = "0.2"
ndn-packet       = { workspace = true, features = ["std"] }
ndn-transport    = { workspace = true }
bytes         = { workspace = true, features = ["std"] }
serde_json       = { workspace = true }
tokio            = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "io-util"] }
tokio-util       = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true, optional = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
anyhow           = { workspace = true }
libc             = { workspace = true }
