[package]
name = "ndn-cert"
description = "NDNCERT: NDN certificate management protocol — issuance, challenges, and CA logic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet   = { workspace = true, features = ["std"] }
ndn-security = { workspace = true }
ndn-did      = { workspace = true }
bytes        = { workspace = true, features = ["std"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
dashmap      = { workspace = true }
ring         = { workspace = true }
futures      = { workspace = true }
tokio        = { workspace = true, features = ["sync", "time"] }
base64       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
