[package]
name = "ndn-config"
description = "NDN forwarder TOML configuration and management interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-tlv       = { workspace = true, features = ["std"] }
ndn-packet    = { workspace = true }
ndn-transport = { workspace = true, features = ["serde"] }
bytes         = { workspace = true, features = ["std"] }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
toml          = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
