[package]
name = "ndn-discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pluggable neighbor and service discovery for ndn-rs"

[dependencies]
ndn-tlv       = { workspace = true }
ndn-packet   = { workspace = true }
ndn-transport = { workspace = true }
ndn-face-net  = { workspace = true }
bytes  = { workspace = true, features = ["std"] }
tokio  = { workspace = true, features = ["sync", "time", "net"] }
tracing = { workspace = true }
dashmap = { workspace = true }
ndn-sync = { workspace = true }
