[package]
name = "ndn-engine"
description = "NDN forwarding engine: ForwarderEngine, EngineBuilder, pipeline, and task topology"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["face-net"]
face-net = ["dep:ndn-faces"]

[dependencies]
ndn-packet    = { workspace = true, features = ["std"] }
ndn-transport = { workspace = true }
ndn-faces     = { workspace = true, optional = true }
ndn-discovery = { workspace = true }
ndn-store     = { workspace = true }
ndn-strategy  = { workspace = true }
ndn-security  = { workspace = true }
bytes         = { workspace = true, features = ["std"] }
smallvec      = { workspace = true }
dashmap       = { workspace = true }
tokio         = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-util    = { workspace = true, features = ["rt"] }
tracing       = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }

[dev-dependencies]
criterion     = { workspace = true }
ndn-strategy  = { workspace = true }
ndn-security  = { workspace = true }

[[bench]]
name    = "pipeline"
harness = false
