[package]
name = "ndn-face-l2"
description = "NDN link-layer faces: NamedEtherFace and WfbFace (Linux only), BluetoothFace (Linux only), EtherNeighborDiscovery, RadioTable"
version.workspace = true
edition.workspace = true
license.workspace = true

# Platform note: NamedEtherFace, WfbFace, and BluetoothFace are compiled only
# on Linux (#[cfg(target_os = "linux")]). NeighborDiscovery and RadioTable are
# cross-platform data structures and compile everywhere.
[features]
default = []

[dependencies]
ndn-tlv       = { workspace = true }
ndn-packet    = { workspace = true, features = ["std"] }
ndn-transport = { workspace = true }
ndn-face-net  = { workspace = true }
ndn-discovery = { workspace = true }
bytes         = { workspace = true, features = ["std"] }
tokio         = { workspace = true, features = ["sync", "io-util", "net"] }
dashmap       = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
libc          = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
pcap = { workspace = true }
windows-sys = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
