[package]
name = "ndn-face-local"
description = "NDN local faces: AppFace (in-process mpsc), UnixFace (Unix socket), and ShmFace (shared memory)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Custom SPSC ring-buffer SHM face backed by POSIX shm_open + Unix datagram
## wakeup sockets.  Unix only.  Enabled by default on Unix targets.
spsc-shm = ["dep:libc"]

## iceoryx2 publish-subscribe SHM face.  Cross-platform (Linux, macOS, Windows).
## When both features are enabled, the iceoryx2 backend is selected for
## ShmFace/ShmHandle; SpscFace/SpscHandle remain available directly.
iceoryx2-shm = ["dep:iceoryx2"]

[dependencies]
ndn-packet    = { workspace = true }
ndn-transport = { workspace = true }
bytes         = { workspace = true }
tokio         = { workspace = true, features = ["sync", "io-util", "net"] }
tokio-util    = { workspace = true, features = ["codec"] }
futures       = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
libc          = { workspace = true, optional = true }
iceoryx2      = { workspace = true, optional = true }

[dev-dependencies]
ndn-tlv   = { workspace = true }
tokio     = { workspace = true, features = ["rt", "macros", "net", "time"] }
criterion = { workspace = true }

[[bench]]
name    = "face_local"
harness = false
