[package]
name = "ndn-face-local"
description = "NDN local faces: AppFace (in-process mpsc), UnixFace (Unix socket), and ShmFace (shared memory)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Custom SPSC ring-buffer SHM face.
## Wakeup: futex on Linux (direct syscall, no PRIVATE flag for cross-process SHM),
## named FIFO pipe on other Unix.  Requires POSIX shm_open.  Unix only.
spsc-shm = ["dep:libc"]


[dependencies]
ndn-packet    = { workspace = true }
ndn-transport = { workspace = true }
bytes         = { workspace = true, features = ["std"] }
tokio         = { workspace = true, features = ["sync", "io-util", "net", "rt", "macros", "time"] }
tokio-util    = { workspace = true, features = ["codec"] }
thiserror     = { workspace = true }
tracing       = { workspace = true }
libc          = { workspace = true, optional = true }


[dev-dependencies]
ndn-tlv       = { workspace = true, features = ["std"] }
tokio     = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
criterion = { workspace = true }

[[bench]]
name    = "face_local"
harness = false
