[package]
name = "ndn-face-net"
description = "NDN network faces: UdpFace, TcpFace, MulticastUdpFace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet    = { workspace = true }
ndn-transport = { workspace = true }
bytes         = { workspace = true }
tokio         = { workspace = true, features = ["net", "sync", "io-util"] }
tokio-util    = { workspace = true, features = ["codec"] }
futures       = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
ndn-tlv = { workspace = true }
tokio   = { workspace = true, features = ["rt", "macros", "net", "time"] }
